macros/tests/sig1-fail.stderr
error: Missing `handle` and `table` arguments
 --> tests/sig1-fail.rs:2:1
  |
2 | fn e_main() {}
  | ^^^^^^^^^^^
